# starter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_fonts.h  main.cpp
src/cmake/: add_shader_dependency.cmake  shader.h.in
src/shaders/: common.sh  imgui.fs  position_color.vs  varying.def.sc
tools/shaderc/osx/: build.sh
tools/shaderc/windows/: build.bat
